# kafka_connector

./: Cargo.toml  README.md
src/: common.rs  connectors.rs  lib.rs  tests.rs
static/: mongo_sink.json  mongo_sink_put.json
