[package]
name = "kafka_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
